[package]
name = "hubit"
description = "A CLI tool for interacting with GitHub Issues and PRs"
homepage = "https://hubit.adamperkowski.dev"
repository = "https://github.com/adamperkowski/hubit"
authors = ["Adam Perkowski <adas1per@protonmail.com>"]
readme = "README.md"
license = "GPL-3.0"
version = "0.0.0"
edition = "2021"
include = [
    "src/*.rs",
    "Cargo.toml",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secrecy = "0.10.2"
colored = "2.1.0"
